tests/src/frontend/typechecking/invalid/mutable_lambda_7.sk
// mutable lambdas not allowed in constants (type via alias)
// TODO  error position is alias def not usage site
class Foo() {
  type MutLambda = () -> void;
  const mutLambda: this::MutLambda = () -> void;
}
